src/objects/Bloque__c.object
<CustomObject>
    <description>Permite registrar el bloque sobre el que se va a realizar la gestión de cobro</description>
    <fields>
        <fullName>Activo__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Activo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BloqueActivo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Permite identificar si el bloque esta activo para la gestión de cobro</description>
        <label>Bloque activo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bloques_Fecha__c</fullName>
        <label>Bloques Fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monto_Gestionado__c</fullName>
        <label>Monto Gestionado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monto_Inicial__c</fullName>
        <label>Monto Inicial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monto__c</fullName>
        <label>% Monto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Recibos__c</fullName>
        <label>% Recibos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Bloque</label>
    <nameField>
        <displayFormat>Bloque - {YYYY}{MM}{DD} - {0000}</displayFormat>
        <label>Consecutivo Bloque</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bloques</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>